; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_core_delete.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_core_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_PATH_CORE = common dso_local global i32 0, align 4
@CMD_EVENT_UNLOAD_CORE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_core_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_core_delete(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load i32, i32* @RARCH_PATH_CORE, align 4
  %15 = call i8* @path_get(i32 %14)
  store i8* %15, i8** %12, align 8
  %16 = load i8*, i8** %12, align 8
  %17 = call i32 @string_is_empty(i8* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %5
  %20 = load i8*, i8** %12, align 8
  %21 = call i8* @strdup(i8* %20)
  br label %23

22:                                               ; preds = %5
  br label %23

23:                                               ; preds = %22, %19
  %24 = phi i8* [ %21, %19 ], [ null, %22 ]
  store i8* %24, i8** %13, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %28, label %27

27:                                               ; preds = %23
  store i32 0, i32* %6, align 4
  br label %39

28:                                               ; preds = %23
  %29 = load i32, i32* @CMD_EVENT_UNLOAD_CORE, align 4
  %30 = call i32 @generic_action_ok_command(i32 %29)
  %31 = call i32 @menu_entries_flush_stack(i32 0, i32 0)
  %32 = load i8*, i8** %13, align 8
  %33 = call i64 @filestream_delete(i8* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %28
  br label %36

36:                                               ; preds = %35, %28
  %37 = load i8*, i8** %13, align 8
  %38 = call i32 @free(i8* %37)
  store i32 0, i32* %6, align 4
  br label %39

39:                                               ; preds = %36, %27
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i8* @path_get(i32) #1

declare dso_local i32 @string_is_empty(i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @generic_action_ok_command(i32) #1

declare dso_local i32 @menu_entries_flush_stack(i32, i32) #1

declare dso_local i64 @filestream_delete(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
